--- a/main.css
+++ b/main.css
@@ -187,8 +187,8 @@ body {
 }
 
 .main .header {
-    background: var(--light-color);
-    display: flex;
+    /* background: var(--light-color); */
+    /* display: flex; */
     justify-content: space-between;
     align-items: center;
     flex-wrap: wrap;
@@ -238,13 +238,12 @@ body {
 /* Cards */
 
 .todos-container {
-    /* display: flex; */
+    display: flex;
     display: grid;
-    grid-template-columns: repeat(4, 2fr);
+    grid-template-columns: repeat(2, 1fr);
     grid-auto-rows: max-content;
     gap: 20px;
     padding: 1.6rem;
-    flex-wrap: wrap;
 }
 
 
@@ -252,16 +251,16 @@ body {
     display: flex;
     gap: 20px;
     padding: 1.6rem;
-    flex-wrap: wrap;
-} */
+    flex-wrap: wrap; 
+}*/
 
 .todo {
-    background-color: #fff;
+    /*background-color: #fff;*/
     color: var(--primary-color);
     border-top: 6px solid;
     border-radius: 10px;
     box-shadow: 0 3px 10px rgba(0, 0, 0, 0.2);
-    padding: 40px;
+    padding: 20px;
     display: flex;
     flex-direction: column;
     align-items: flex-start;
@@ -299,14 +298,14 @@ body {
 
 .user-p {
     text-align: center;
-    padding-left: 10px;
-    padding-top: 25px;
+    /* padding-left: 10px;
+    padding-top: 25px; */
 }
 
 .offcanvas-body {
     width: 250px;
-    background: #f8f8ff;
-    min-height: 100vh;
+    /* background: #f8f8ff; */
+    /* min-height: 100vh; */
     transition: 500ms width;
 }
 
@@ -325,7 +324,7 @@ body {
     padding: 10px 20px;
     cursor: pointer;
     border-radius: 5px;
-    border: none;
+    /* border: none; */
 }
 
 .home {
