--- a/reset.css
+++ b/reset.css
@@ -85,11 +85,11 @@ mark,
 audio,
 video {
     margin: 0;
-    padding: 0;
-    border: 0;
-    font-size: 100%;
-    font: inherit;
-    vertical-align: baseline;
+    /* padding: 0; */
+    /* border: 0;
+    font-size: 100%; */
+    /* font: inherit;
+    vertical-align: baseline; */
 }
 
 
